tests/interpreter/errors/divide_by_zero.mochi
let x = 1 / 0